--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.5",
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "motion": "^12.4.10",
     "react": "^18.3.1",
