--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.77",
     "@tailwindcss/vite": "^4.0.9",
@@ -21,7 +22,6 @@
     "firebase": "^11.4.0",
     "motion": "^12.4.10",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
